# xhs-python-sdk

./: .gitignore  LICENSE  README.md  README_EN.md  TESTING.md  config.local.json.example  pyproject.toml  requirements.txt  setup.py  test_full.py  test_live.py  test_sdk.py  test_simple.py
examples/: basic_usage.py  detailed_tutorial.py
tests/: README.md  __init__.py  debug_api_endpoints.py  run_tests.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  test_api_live.py  test_demo.py
tests/unit/: __init__.py  test_basic.py
xhs_sdk/: __init__.py  client.py  constants.py  exceptions.py  utils.py
xhs_sdk/api/: __init__.py  base.py  comment.py  note.py  user.py
xhs_sdk/core/: __init__.py  http_client.py  signature.py
xhs_sdk/models/: __init__.py  comment.py  note.py  user.py
