[project]
name = "xhs-sdk"
version = "0.1.0"
description = "A Python SDK for XiaoHongShu (小红书) Web API - For Learning Purposes Only"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.5.9",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.0.0",
    "PyExecJS>=1.5.1",
    "structlog>=23.0.0",
    "typing-extensions>=4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["xhs_sdk"]

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "C0103",  # Invalid name
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=xhs_sdk --cov-report=html --cov-report=term"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"